@startuml

title UC04 - Especificar Competência Técnica

class Plataforma <<Singleton>>{
    String designacao
}

class CompetenciaTecnica{
    String codigo
    String descBreve
    String descDetalhada
}

class GrauProficiencia{
    Integer valor
    String designacao
}

class AreaAtividade{
    String codigo
    String descBreve
    String descDetalhada
}

Plataforma "1" -- "*" CompetenciaTecnica: possui >
CompetenciaTecnica "1" --- "*" GrauProficiencia: aplica >
CompetenciaTecnica "*" --- "1" AreaAtividade: referente a >
Plataforma "1" -- "*" AreaAtividade: possui >

@enduml